--- a/app/views/ingredients/new.html.erb
+++ b/app/views/ingredients/new.html.erb
@@ -3,7 +3,7 @@
   <%= f.text_field :name %>
   <br>
   <br>
-  <%= f.label :ingredient_id %>
+  <%#= f.label :ingredient_id %>
   <%= f.collection_select :ingredient_id, Ingredient.order(:name),:id,:name, include_blank: true %>
   <br>
   <%= f.submit 'New' %>
