--- a/app/views/ingredients/edit.html.erb
+++ b/app/views/ingredients/edit.html.erb
@@ -4,10 +4,9 @@
   <br>
   <br>
   <%= f.label :ingredient_id %>
-  <%= f.collection_select :ingredient_id, ingredient.order(:name),:id,:name, include_blank: true %>
+  <%= f.collection_select :ingredient_id, Ingredient.order(:name),:id,:name, include_blank: true %>
   <br>
   <%= f.submit 'Update' %>
   <% end %>
 
-  <%#= link_to 'Show', @ingredient %> |
-  <%#= link_to 'Back', categories_path %>
+  
