--- a/app/views/categories/edit.html.erb
+++ b/app/views/categories/edit.html.erb
@@ -4,10 +4,7 @@
   <br>
   <br>
   <%= f.label :category_id %>
-  <%= f.collection_select :category_id, Category.order(:name),:id,:name, include_blank: true %>
+  <%#= f.collection_select :category_id, Category.order(:name),:id,:name, include_blank: true %>
   <br>
   <%= f.submit 'Update' %>
   <% end %>
-
-  <%#= link_to 'Show', @category %> |
-  <%#= link_to 'Back', categories_path %>
