--- a/app/views/ingredients/_form.html.erb
+++ b/app/views/ingredients/_form.html.erb
@@ -15,6 +15,10 @@
     <%= f.label :name %><br>
     <%= f.text_field :name %>
   </div>
+  <div class="field"> 
+    <%= f.label :ingredient_id %><br>
+    <%= f.text_field :ingredient_id %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
