--- a/app/views/ingredients/new.html.erb
+++ b/app/views/ingredients/new.html.erb
@@ -3,8 +3,8 @@
   <%= f.text_field :name %>
   <br>
   <br>
-  <%#= f.label :ingredient_id %>
-  <%= f.collection_select :ingredient_id, Ingredient.order(:name),:id,:name, include_blank: true %>
+  <%= f.label :ingredient_id %>
+  <%#= f.collection_select :ingredient_id, Ingredient.order(:name),:id,:name, include_blank: true %>
   <br>
   <%= f.submit 'New' %>
   <% end %>
