--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,10 +11,13 @@
 <%= yield %>
 <nav> 
 <ul>
-  
+  <li><%#= link_to('Category', category_path) %></li>
   <li><%= link_to('New Category', new_category_path) %></li>
+  <li><%#= link_to('Recipe', recipe_path) %></li>
   <li><%= link_to('New Recipe', new_recipe_path) %></li>
+  <li><%#= link_to('Ingredient', ingredient_path) %></li>
   <li><%= link_to('New Ingredient', new_ingredient_path) %></li>
+  <li><%=link_to('New Quantity', new_quantity_path) %></li>
 </ul>
 </nav>
 </body>
