--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -15,7 +15,20 @@
     <%= f.label :name %><br>
     <%= f.text_field :name %>
   </div>
-  <div class="actions">
+  <div class="field">
+    <%= f.label :recipe_id %><br>
+    <%= f.text_field :recipe_id %>
+  </div> 
+  <div class="field">
+    <%= f.label :category_id %><br>
+    <%= f.select("category_id", Category.all.map { |c| [c.name, c.id]}) %>
+  </div> 
+
+  <%#= f.collection_check_boxes :ingredient_ids, Ingredient.all.order(:name), :id, :name %>
+  
+  <%#= f.select :category_id, Category.all.map { |c| [c.name, c.id] } %>
+
+  <!-- <div class="actions"> -->
     <%= f.submit %>
   </div>
 <% end %>
