--- a/app/views/recipes/edit.html.erb
+++ b/app/views/recipes/edit.html.erb
@@ -4,7 +4,7 @@
   <br>
   <br>
   <%= f.label :recipe_id %>
-  <%= f.collection_select :recipe_id, Recipe.order(:name),:id,:name, include_blank: true %>
+  <%#= f.collection_select :recipe_id, Recipe.order(:name),:id,:name, include_blank: true %>
   <br>
   <%= f.submit 'Update' %>
   <% end %>
