--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -5,5 +5,11 @@
   <%= @recipe.name %>
 </p>
 
+<!-- <strong>Ingredients</strong> -->
+<%# @recipe.ingredients.each do |ingredient| %>
+<%#= simple_format ingredient.name %>
+
+
 <%= link_to 'Edit', edit_recipe_path(@recipe) %> |
 <%= link_to 'Back', recipes_path %>
+
